Service for invoking cough service

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "nodemon --exec babel-node server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.940.0",
     "dotenv": "^8.2.0",
     "nanoid": "^3.1.23",
     "node-input-validator": "^4.4.1",
