--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aws-sdk": "^2.940.0",
     "dotenv": "^8.2.0",
+    "express-fileupload": "^1.2.1",
     "nanoid": "^3.1.23",
     "node-input-validator": "^4.4.1",
     "snet-sdk": "^2.0.0-beta.0"
