--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.940.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express-fileupload": "^1.2.1",
     "nanoid": "^3.1.23",
